Implemented 'My Camera' and 'Rent Camera' features